Fixed CSS vertical alignment of string in list

--- a/src/assets/scss/dashboard/_tables.scss
+++ b/src/assets/scss/dashboard/_tables.scss
@@ -412,7 +412,7 @@ tr.element-row:not(.expanded-row):active {
   > tbody > tr > td,
   > tfoot > tr > td {
     font-size: $font-size-sm;
-    vertical-align: top;
+    vertical-align: middle;
   }
 
   > thead > tr > th,
